# chatty-mcp

./: .gitignore  .pre-commit-config.yaml  .vercelignore  PROMPT.md  README.md  chatty.py  kokoro_engine.py  pyproject.toml  system_engine.py
documentation-site/: DIAGRAM.txt  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
documentation-site/docs/: 1_welcome.md  2_install.md  2_install_config.md  2_installation.md  3_basic_usage.md  3_config.md  3_configuration.md  4_prompt.md  5_mcp_cmd_cookbook.md  5_speech_engine.md  6_speech_engine.md  7_debug.md
documentation-site/src/components/HomepageFeatures/: index.tsx
documentation-site/src/pages/: community.md  index.module.css  index.tsx  list-prompts.md
